; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_i2s.c_I2SDataGet.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_i2s.c_I2SDataGet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MCASP_O_RXSTAT = common dso_local global i64 0, align 8
@MCASP_RXSTAT_RDATA = common dso_local global i64 0, align 8
@MCASP_O_RXBUF0 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @I2SDataGet(i64 %0, i64 %1, i64* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64* %2, i64** %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = sub i64 %7, 1
  %9 = shl i64 %8, 2
  store i64 %9, i64* %5, align 8
  br label %10

10:                                               ; preds = %19, %3
  %11 = load i64, i64* %4, align 8
  %12 = load i64, i64* @MCASP_O_RXSTAT, align 8
  %13 = add i64 %11, %12
  %14 = call i64 @HWREG(i64 %13)
  %15 = load i64, i64* @MCASP_RXSTAT_RDATA, align 8
  %16 = and i64 %14, %15
  %17 = icmp ne i64 %16, 0
  %18 = xor i1 %17, true
  br i1 %18, label %19, label %20

19:                                               ; preds = %10
  br label %10

20:                                               ; preds = %10
  %21 = load i64, i64* %4, align 8
  %22 = load i64, i64* @MCASP_O_RXBUF0, align 8
  %23 = add i64 %21, %22
  %24 = load i64, i64* %5, align 8
  %25 = add i64 %23, %24
  %26 = call i64 @HWREG(i64 %25)
  %27 = load i64*, i64** %6, align 8
  store i64 %26, i64* %27, align 8
  ret void
}

declare dso_local i64 @HWREG(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
